[package]
name = "rs-humanize"
version = "0.1.2"
authors = ["Colin Adler <colin@coder.com>"]
edition = "2018"
description = "Format data types into human readable strings"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
