[package]
name = "rs-humanize"
version = "1.1.0"
authors = ["Colin Adler <colin@coder.com>"]
edition = "2018"
description = "Format data types into human readable strings"
license = "MIT"
documentation = "https://github.com/coadler/rs-humanize"
homepage = "https://github.com/coadler/rs-humanize"
repository = "https://github.com/coadler/rs-humanize"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
