[package]
name = "rs-humanize"
version = "1.2.0"
authors = ["Colin Adler <colin@coder.com>"]
edition = "2018"
description = "Format data types into human readable strings"
license = "MIT"
documentation = "https://docs.rs/rs-humanize"
homepage = "https://github.com/coadler/rs-humanize"
repository = "https://github.com/coadler/rs-humanize"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
strfmt = "0.1"
iota = "0.2"

[dev-dependencies]
rand = "0.7.3"
